# ethnum-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  a.c
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
bench/: Cargo.toml
bench/benches/: num.rs
fuzz/: Cargo.toml
fuzz/src/: conv.rs  lib.rs  reference.rs
intrinsics/: Cargo.toml  README.md  build.rs
intrinsics/src/: intrinsics.c  lib.rs
intx/: Cargo.toml  build.rs
intx/src/: div128.rs  intx.cpp  intx.hpp  lib.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs  parse.rs
scripts/: check_features.sh
src/: borsh.rs  cmp.rs  convert.rs  error.rs  fmt.rs  int.rs  intrinsics.rs  iter.rs  lib.rs  ops.rs  parse.rs  serde.rs  uint.rs
src/impls/: mod.rs  rlp.rs  scale.rs
src/int/: api.rs  cmp.rs  convert.rs  fmt.rs  iter.rs  num.rs  ops.rs
src/intrinsics/: cast.rs  intrinsics.rs  llvm.rs  native.rs  signed.rs
src/intrinsics/native/: add.rs  ctz.rs  divmod.rs  divmod_impl.rs  intx.rs  mul.rs  rot.rs  rotate.rs  shl.rs  shr.rs  sub.rs
src/macros/: cmp.rs  fmt.rs  iter.rs  ops.rs
src/uint/: api.rs  cmp.rs  convert.rs  fmt.rs  num.rs  ops.rs
tests/: serialize_deserialize.rs
tools/: bench-build.sh
