[package]
name = "ethnum"
version = "1.5.1"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "256-bit integer implementation"
documentation = "https://docs.rs/ethnum"
readme = "README.md"
homepage = "https://github.com/nlordell/ethnum-rs"
repository = "https://github.com/nlordell/ethnum-rs"
license = "MIT OR Apache-2.0"
keywords = ["integer", "u256", "ethereum"]
categories = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[package.metadata.docs.rs]
features = ["serde"]

[workspace]
members = ["bench", "fuzz", "intrinsics"]

[features]
intrinsics = ["dep:ethnum-intrinsics"]

llvm-intrinsics = ["intrinsics"] # deprecated
macros = [] # deprecated

[dependencies]
ethnum-intrinsics = { version = "=1.2.0", path = "intrinsics", optional = true }
serde = { version = "1", default-features = false, optional = true }

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "debuginfo" # "symbols" for less binary size but no backtraces
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.bench]
inherits = "profiling"
