[package]
name = "ethnum-bench"
version = "0.0.0"
publish = false
edition = "2021"

[[bench]]
name = "num"
harness = false

[features]
intrinsics = ["ethnum/intrinsics"]

[dependencies]
ethnum = { path = ".." }
criterion = "0.5"
primitive-types = { version = "0.13", optional = true }
ruint = { version = "1", optional = true }
cfg-if = "1"
