[package]
name = "ethnum-macros"
version = "1.1.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "256-bit integer literals"
documentation = "https://docs.rs/ethnum-macros"
readme = "README.md"
homepage = "https://github.com/nlordell/ethnum-rs"
repository = "https://github.com/nlordell/ethnum-rs"
license = "MIT OR Apache-2.0"
keywords = ["integer", "u256", "ethereum"]
categories = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[lib]
proc-macro = true
